--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -56,6 +56,7 @@ header nav {
     width: 100%;
     background-image: url(../img/hero-zig-crotch.jpg);
     background-size: cover;
+    background-position: center;
     background-color: gray;
 }
 #banner .banner-message {
@@ -86,7 +87,7 @@ header nav {
     border: 1px solid black;
     margin: 0 auto;
 }
-#mission .mission-card-container {
+.mission-card-container {
     display: flex;
     flex-flow: row wrap;
     align-items: center;
@@ -118,6 +119,23 @@ header nav {
     font-weight: 500;
 }
 
+@media only screen and (max-width: 768px) {
+    .mission-card-container {
+        display: flex;
+        flex-direction: column;
+    }
+    #mission h2 {
+        font-size: 2.5rem;
+    }
+    .mission-card img {
+        width: 350px;
+        height: auto;
+    }
+    .mission-card p {
+        font-size: 2rem;
+    }
+}
+
 /* --- TEAM --- */
 
 #team {
@@ -132,7 +150,7 @@ header nav {
 }
 .team-card-container {
     display: flex;
-    flex-flow: row wrap;
+    flex-flow: row nowrap;
     width: 80%;
     margin: 0 auto;
     /* border: 1px solid black; */
@@ -181,6 +199,25 @@ header nav {
 #team ul li {
     /* line-height: 1.7rem; */
     margin-bottom: 12px;;
+}
+
+@media only screen and (max-width: 768px) {
+    #team {
+
+        position: relative;
+        top: 180px;
+        padding: 0;
+    }
+    .team-card-container {
+        display: flex;
+        flex-flow: row nowrap;
+        width: 100%
+        /* padding: 0px;  */
+    }
+    .team-card img {
+        width: 180px;
+        height: auto;   
+    }
 }
 
 /* --- CONTACT --- */
