--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -58,19 +58,19 @@ nav {
     background-position: center;
     background-color: gray;
 }
-#banner .banner-message {
+.banner-message {
     font-family: Raleway, sans-serif;
     display: block;
     width: 100%;
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(255, 255, 255, 0.4);
     text-align: center;
     padding: 25px
 }
-#banner .banner-message h1, h4 {
+.banner-message h1, h4 {
     padding: 0;
     margin: 0;
 }
-#banner .banner-message h1 {
+.banner-message h1 {
     font-size: 2.5rem;
     letter-spacing: 0.4rem;
     margin-bottom: 10px;
@@ -81,6 +81,16 @@ nav {
         width: 100%;
         height: 250px;   
     }
+    .banner-message {
+        padding: 5px;
+    }
+    .banner-message h1 {
+        font-size: 2rem;
+        margin-bottom: 5px;
+    }
+    .banner-message h4 {
+        font-size: .8rem;
+    }
 }
 
 /* --- MISSION --- */
@@ -89,8 +99,7 @@ nav {
     display: block;
     position: relative;
     top: 150px;
-    max-width: 90%;
-    border: 1px solid black;
+    max-width: 1024px;
     margin: 0 auto;
 }
 .mission-card-container {
@@ -126,15 +135,23 @@ nav {
 }
 
 @media only screen and (max-width: 768px) {
+    #mission {
+        position: relative;
+        top: 85px;
+        width: 100%;
+        margin: 0;
+    }
+    #mission h2 {
+        font-size: 2rem;
+    }
     .mission-card-container {
-        border: 1px solid lime;
-        display: flex;
-        flex-direction: column;
+        width: 100%;
         justify-content: center;
         margin: 0 auto;
     }
-    #mission h2 {
-        font-size: smaller;
+    .mission-card {
+        width: 100%;
+        margin: 0;
     }
     .mission-card img {
         width: 80%;
@@ -142,9 +159,8 @@ nav {
         margin: 0 auto;
     }
     .mission-card p {
-        font-size: 50%;
-        margin: 0 auto;
         max-width: 100%;
+        font-size: 1.5rem;
     }
 }
 
@@ -153,7 +169,7 @@ nav {
 #team {
     display: block;
     position: relative;
-    top: 180px;
+    top: 80px;
     max-width: 100%;
     border: 1px solid black;
     /* margin: 0 auto; */
@@ -193,23 +209,19 @@ nav {
     font-family: Raleway, sans-serif;
     font-weight: 600;
     font-size: 1.5rem;
-    /* border: 1px solid black; */
     margin: 0px;
     padding: 10px;
 }
 .team-card .skills {
     grid-row: 7 / span 3;
     height: 130px;
-    /* border: 1px solid black; */
     margin: 0px;
 }
 #team ul {
     padding: 0;
     list-style-type: none;
-    /* text-align: center; */
 }
 #team ul li {
-    /* line-height: 1.7rem; */
     margin-bottom: 12px;;
 }
 
@@ -222,14 +234,17 @@ nav {
         font-size: 50%;
         margin: 0 auto;
     }
+    #team h2 {
+        font-size: 1.5rem;
+    }
     .team-card-container {
         display: flex;
         flex-flow: row nowrap;
         max-width: 100%;
-        /* padding: 0px;  */
     }
     .team-name {
-        font-size: 50%;
+        font-size: 1rem;
+        height: auto;
     }
     .team-card img {
         max-width: 100%;
