--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -169,19 +169,15 @@ nav {
 #team {
     display: block;
     position: relative;
-    top: 80px;
+    top: 180px;
     max-width: 100%;
-    border: 1px solid black;
-    /* margin: 0 auto; */
     text-align: center;
-    /* padding: 100px */
 }
 .team-card-container {
     display: flex;
     flex-flow: row nowrap;
     width: 80%;
     margin: 0 auto;
-    /* border: 1px solid black; */
     align-content: stretch;
     justify-content: center;
 }
@@ -195,7 +191,6 @@ nav {
     grid-row: 1 / span 5;
     width: 250px;
     height: 400px;
-    /* border: 1px solid black; */
     border-right: 2px solid white;
     background: gray;
     margin: 0px;
@@ -228,7 +223,7 @@ nav {
 @media only screen and (max-width: 768px) {
     #team {
         position: relative;
-        top: 180px;
+        top: 80px;
         padding: 0;
         max-width: 100%;
         font-size: 50%;
@@ -260,12 +255,18 @@ nav {
     top: 180px;
     width: 100%;
     background-color: black;
-    /* border: 1px solid black; */
     padding: 10px 0px;
     margin: 0 auto;
     text-align: center;
 }
 
+@media only screen and (max-width: 768px) {
+    #contact {
+        display: block;
+        position: relative;
+        top: 80px;
+    }
+}
 
 /* --- FOOTER --- */
 
@@ -276,7 +277,6 @@ footer {
     align-items: center;
     width: 100%;
     height: 65px;
-    /* border-top: 1px solid black; */
     background-color: black;
     padding: 0px 25px;
 }
@@ -285,4 +285,14 @@ footer {
 }
 .feed-us {
     margin-left: auto;
+}
+
+@media only screen and (max-width: 768px) {
+    footer {
+        display: block;
+        position: relative;
+        top: 80px;
+        padding: 0 10px;
+    }
+
 }
