--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -75,7 +75,7 @@ nav a {
     text-align: center;
     padding: 25px
 }
-.banner-message h1, h4 {
+.banner-message h1, .banner-message h4 {
     padding: 0;
     margin: 0;
 }
@@ -268,7 +268,7 @@ nav a {
     margin: 0 auto;
     text-align: center;
 }
-#contact h3, h4 {
+#contact h3, #contact h4 {
     text-decoration: underline;
 }
 
