--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -14,6 +14,10 @@ a {
 a:hover {
     text-decoration: underline;
 }
+a:focus {
+    text-decoration: none;
+    color: lightgray;
+}
 .dark {
     color: darkgray;
 }
@@ -47,8 +51,65 @@ nav a {
 }
 
 @media only screen and (max-width: 768px) {
+    header {
+        padding: 10px;
+    }
     nav {
         display: none;
+    }
+}
+
+@media only screen and (max-width: 780px) {
+    .menu-button {
+        display: block;
+    }
+    /* Style The Dropdown Button */
+    .dropbtn {
+        color: white;
+        padding: 5px;
+        font-size: 16px;
+        border: none;
+        cursor: pointer;
+    }
+    
+    /* The container <div> - needed to position the dropdown content */
+    .dropdown {
+        position: relative;
+        display: inline-block;
+    }
+    
+    /* Dropdown Content (Hidden by Default) */
+    .dropdown-content {
+        display: none;
+        position: absolute;
+        right: 0;
+        background-color: darkgray;
+        /* box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); */
+        z-index: 1;
+    }
+    
+    /* Links inside the dropdown */
+    .dropdown-content a {
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+        border-bottom: 1px solid black;
+    }
+    
+    /* Change color of dropdown links on hover */
+    .dropdown-content a:hover {
+        background-color: lightgray;
+    }
+    
+    /* Show the dropdown menu on hover */
+    .dropdown:hover .dropdown-content {
+        display: block;
+    }
+    
+    /* Change the background color of the dropdown button when the dropdown content is shown */
+    .dropdown:hover .dropbtn {
+        background-color: lightgray;
     }
 }
 
@@ -62,7 +123,6 @@ nav a {
     top: 84px;
     width: 100%;
     height: 500px;
-    background-image: url(../img/hero-zig-crotch.jpg);
     background-size: cover;
     background-position: center;
     background-color: gray;
@@ -71,7 +131,7 @@ nav a {
     font-family: Raleway, sans-serif;
     display: block;
     width: 100%;
-    background-color: rgba(255, 255, 255, 0.4);
+    background-color: rgba(255, 255, 255, 0.5);
     text-align: center;
     padding: 25px
 }
