--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -264,9 +264,6 @@ nav a {
     background: gray;
     margin: 0px;
 }
-#last-team-img {
-    border-right: 0px;
-}
 .team-name {
     height: 50px;
     grid-row: 6 / span 1;
@@ -295,7 +292,7 @@ nav a {
         top: 80px;
         padding: 0;
         max-width: 100%;
-        font-size: 50%;
+        /* font-size: 50%; */
         margin: 0 auto;
     }
     #team h2 {
@@ -313,6 +310,9 @@ nav a {
     .team-card img {
         max-width: 100%;
         height: auto;   
+    }
+    #team ul li {
+        font-size: 0.6rem;
     }
 }
 
@@ -370,3 +370,19 @@ footer {
     }
 
 }
+
+#myBtn {
+    display: none; 
+    position: fixed;
+    bottom: 20px; 
+    right: 30px; 
+    z-index: 99; 
+    cursor: pointer; 
+    font-size: 72px; 
+    color: lightgray;
+    text-shadow: 1px 1px 2px rgba(211, 211, 211, 0.8rem)  ;
+  }
+  
+  #myBtn:hover {
+    color: #555;
+  }
