--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -120,6 +120,7 @@ nav a {
 
 #banner {
     display: flex;
+    flex: 1 1 100%;
     justify-content: center;
     align-items: center;
     position: relative;
@@ -170,7 +171,7 @@ nav a {
 #mission {
     display: block;
     position: relative;
-    top: 85px;
+    top: 100px;
     max-width: 1024px;
     margin: 0 auto;
 }
@@ -179,7 +180,7 @@ nav a {
     flex-flow: row wrap;
     align-items: center;
     justify-content: space-around;
-    width: 90%;
+    width: 100%;
     margin: 0 auto;
 }
 #mission h2 {
@@ -191,11 +192,14 @@ nav a {
                          "image"
                          "image"
                          "caption";
-    margin: 20px;
+    width: 32%;
+    /* margin: 20px; */
 }
 .mission-card img {
-    background-color: gray;
-    width: 250px;
+    display: flex;
+    flex-flow: row wrap;
+    flex: 1 1 100%;
+    width: 100%;
     height: auto;
     grid-area: image;
 }
@@ -204,6 +208,7 @@ nav a {
     text-align: center;
     font-family: Raleway, sans-serif;
     font-weight: 500;
+    font-size: 1.25rem;
 }
 
 @media only screen and (max-width: 768px) {
@@ -217,16 +222,20 @@ nav a {
         font-size: 2rem;
     }
     .mission-card-container {
+        display: flex;
+        flex: 1 1 100%;
         width: 100%;
         justify-content: center;
         margin: 0 auto;
     }
     .mission-card {
-        width: 100%;
+        width: 80%;
         margin: 0;
     }
     .mission-card img {
-        width: 80%;
+        display: flex;
+        flex: 1 1 100%;
+        width: 100%;
         height: auto;
         margin: 0 auto;
     }
@@ -241,12 +250,13 @@ nav a {
 #team {
     display: block;
     position: relative;
-    top: 180px;
+    top: 100px;
     max-width: 100%;
     text-align: center;
 }
 .team-card-container {
     display: flex;
+    flex: 1 1 250px;
     flex-flow: row nowrap;
     width: 80%;
     margin: 0 auto;
@@ -259,10 +269,11 @@ nav a {
     grid-column-gap: 0;
 }
 .team-card img {
-    display: block;
+    display: flex;
+    flex: 1 1 250px;
     grid-row: 1 / span 5;
-    width: 250px;
-    height: 400px;
+    width: 100%;
+    height: auto;
     border-right: 2px solid white;
     background: gray;
     margin: 0px;
@@ -301,19 +312,19 @@ nav a {
     #team h2 {
         font-size: 1.5rem;
     }
-    .team-card-container {
+    /* .team-card-container {
         display: flex;
         flex-flow: row nowrap;
         max-width: 100%;
-    }
+    } */
     .team-name {
         font-size: 1rem;
         height: auto;
     }
-    .team-card img {
+    /* .team-card img {
         max-width: 100%;
         height: auto;   
-    }
+    } */
     #team ul li {
         font-size: 0.6rem;
     }
