--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -18,10 +18,18 @@ a:focus {
     text-decoration: none;
     color: lightgray;
 }
-
 .dark {
     color: darkgray;
 }
+
+    /* anchor-  offset spans */
+#mission-landing,
+#team-landing,
+#contact-landing {
+    position: absolute;
+    top: -85px;
+}
+    
 
 /* --- HEADER --- */
 
@@ -30,7 +38,7 @@ header {
     top: 0;
     display: flex;
     z-index: 100;
-    align-items: center ;
+    align-items: center;
     width: 100%;
     height: 85px;
     background-color: black;
@@ -42,6 +50,8 @@ header .company-name {
 }
 nav {
     margin-left: auto;
+    position: relative;
+    /* bottom: 13px; */
 }
 nav a {
     display: inline-block;
@@ -52,25 +62,36 @@ nav a {
 #last-nav-link {
     border-right: none;
 }
+.dropbtn.menu-button.material-icons {
+    display: none;
+}
 
 @media only screen and (max-width: 768px) {
     header {
         padding: 10px;
+        padding-right: 0;
     }
     nav {
         display: none;
+        /* bottom: 0; */
     }
 }
 
 @media only screen and (max-width: 780px) {
+
+    .dropbtn.menu-button.material-icons {
+        display: inline-block;
+        font-size: 40px;
+    }
     .menu-button {
         display: block;
     }
     /* Style The Dropdown Button */
     .dropbtn {
-        color: white;
+        font-family: "Material Icons";
+        color: darkgray;
         padding: 5px;
-        font-size: 16px;
+        font-size: 40px;
         border: none;
         cursor: pointer;
     }
@@ -86,6 +107,7 @@ nav a {
         display: none;
         position: absolute;
         right: 0;
+        width: 180px;
         background-color: darkgray;
         /* box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); */
         z-index: 1;
@@ -97,6 +119,7 @@ nav a {
         padding: 12px 16px;
         text-decoration: none;
         display: block;
+        width: 100%;
         border-bottom: 1px solid black;
     }
     
@@ -112,7 +135,9 @@ nav a {
     
     /* Change the background color of the dropdown button when the dropdown content is shown */
     .dropdown:hover .dropbtn {
-        background-color: lightgray;
+        background-color: darkgray;
+        color: black;
+        border-bottom: 1px solid black;
     }
 }
 
@@ -129,7 +154,7 @@ nav a {
     height: 500px;
     background-size: cover;
     background-position: center;
-    background-color: gray;
+    /* background-color: gray; */
 }
 .banner-message {
     font-family: Raleway, sans-serif;
@@ -168,7 +193,7 @@ nav a {
 
 /* --- MISSION --- */
 
-#mission {
+.mission {
     display: block;
     position: relative;
     top: 100px;
@@ -183,7 +208,7 @@ nav a {
     width: 100%;
     margin: 0 auto;
 }
-#mission h2 {
+.mission h2 {
     text-align: center;
 }
 .mission-card {
@@ -193,7 +218,7 @@ nav a {
                          "image"
                          "caption";
     width: 32%;
-    /* margin: 20px; */
+
 }
 .mission-card img {
     display: flex;
@@ -204,7 +229,26 @@ nav a {
     grid-area: image;
     border-radius: 15px;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
+    transition: all 0.25s ease-in-out;
 }
+.mission-card img:hover {
+    margin-top: -15px;
+    margin-bottom: 15px;
+}
+/* this overlay code doesn't work */
+/* .mission-card img::before {
+    content:"";
+    background-color: cadetblue;
+    opacity: 0.5;
+    position: absolute;
+    top: 0;
+    left: 0 ;
+    bottom: 0;
+    right: 0; 
+    width: 100%; 
+    height: 1005;
+    z-index: 101; 
+} */
 .mission-card p {
     grid-area: caption;
     text-align: center;
@@ -214,13 +258,13 @@ nav a {
 }
 
 @media only screen and (max-width: 768px) {
-    #mission {
+    .mission {
         position: relative;
         top: 85px;
         width: 100%;
         margin: 0;
     }
-    #mission h2 {
+    .mission h2 {
         font-size: 2rem;
     }
     .mission-card-container {
@@ -320,7 +364,7 @@ nav a {
         max-width: 100%;
     } */
     .team-name {
-        font-size: 1rem;
+        font-size: 1.2rem;
         height: auto;
     }
     /* .team-card img {
@@ -328,7 +372,7 @@ nav a {
         height: auto;   
     } */
     #team ul li {
-        font-size: 0.6rem;
+        font-size: 0.7rem;
     }
 }
 
@@ -344,7 +388,7 @@ nav a {
     margin: 0 auto;
     text-align: center;
 }
-#contact h3, #contact h4 {
+#contact h2, #contact h4 {
     text-decoration: underline;
 }
 
@@ -401,8 +445,9 @@ footer {
     -moz-transition: color ease-in-out 0.2s;
     -webkit-transition: color ease-in-out 0.2s;
     animation: fadein 2s;
-''  }
+}
   
   #topBtn:hover {
     color: #555;
+    text-shadow: 1px 1px 2px rgba(85, 85, 85, 0.8);
   }
